--- a/src/analisisV2.ipynb
+++ b/src/analisisV2.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Addiel\\Anaconda3\\lib\\site-packages\\ipykernel\\parentpoller.py:116: UserWarning: Parent poll failed.  If the frontend dies,\n",
+      "                the kernel may be left running.  Please let us know\n",
+      "                about your system (bitness, Python, etc.) at\n",
+      "                ipython-dev@scipy.org\n",
+      "  ipython-dev@scipy.org\"\"\")\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import sys\n",
