--- a/src/analisisV2.ipynb
+++ b/src/analisisV2.ipynb
@@ -4,19 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Addiel\\Anaconda3\\lib\\site-packages\\ipykernel\\parentpoller.py:116: UserWarning: Parent poll failed.  If the frontend dies,\n",
-      "                the kernel may be left running.  Please let us know\n",
-      "                about your system (bitness, Python, etc.) at\n",
-      "                ipython-dev@scipy.org\n",
-      "  ipython-dev@scipy.org\"\"\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import sys\n",
@@ -26,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +999,7 @@
        "[74 rows x 9 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -1030,10 +1018,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2b64c534860>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1c84e13e438>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1057,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -1065,10 +1053,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2b64c87e748>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1c84e40ef60>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1092,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -1100,10 +1088,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2b64c93be10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1c84e437cc0>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1127,16 +1115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2b64c9b6400>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1c848eed588>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1160,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -1168,10 +1156,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2b64ca260f0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1c84e610240>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1194,16 +1182,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2b64ca7c9e8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1c84e6691d0>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1226,16 +1214,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2b64cad8550>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1c84e6ca278>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1255,6 +1243,214 @@
    "source": [
     "%matplotlib inline\n",
     "data.groupby(['SEG_OWNER'])['SEG_OWNER'].count().plot(kind=\"bar\", x=\"SEG_OWNER\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " data =  pd.DataFrame.from_dict(data[data['TABLE_NAME'].isin(['T1'])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>USERNAME</th>\n",
+       "      <th>OPERATION</th>\n",
+       "      <th>TABLE_NAME</th>\n",
+       "      <th>TABLE_SPACE</th>\n",
+       "      <th>SEG_OWNER</th>\n",
+       "      <th>DATE_</th>\n",
+       "      <th>TIME_</th>\n",
+       "      <th>SQL_</th>\n",
+       "      <th>SQL_1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>USER1</td>\n",
+       "      <td>UPDATE</td>\n",
+       "      <td>T1</td>\n",
+       "      <td>TS1</td>\n",
+       "      <td>USER1</td>\n",
+       "      <td>24/10/18</td>\n",
+       "      <td>8:1:306</td>\n",
+       "      <td>update \"USER1\".\"T1\" set \"A\" = '32' where \"A\" =...</td>\n",
+       "      <td>update \"USER1\".\"T1\" set \"A\" = '1' where \"A\" = ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>USER1</td>\n",
+       "      <td>UPDATE</td>\n",
+       "      <td>T1</td>\n",
+       "      <td>TS1</td>\n",
+       "      <td>USER1</td>\n",
+       "      <td>24/10/18</td>\n",
+       "      <td>8:1:306</td>\n",
+       "      <td>update \"USER1\".\"T1\" set \"A\" = '32' where \"A\" =...</td>\n",
+       "      <td>update \"USER1\".\"T1\" set \"A\" = '2' where \"A\" = ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>USER1</td>\n",
+       "      <td>UPDATE</td>\n",
+       "      <td>T1</td>\n",
+       "      <td>TS1</td>\n",
+       "      <td>USER1</td>\n",
+       "      <td>24/10/18</td>\n",
+       "      <td>8:1:306</td>\n",
+       "      <td>update \"USER1\".\"T1\" set \"A\" = '54' where \"A\" =...</td>\n",
+       "      <td>update \"USER1\".\"T1\" set \"A\" = '1' where \"A\" = ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>USER1</td>\n",
+       "      <td>UPDATE</td>\n",
+       "      <td>T1</td>\n",
+       "      <td>TS1</td>\n",
+       "      <td>USER1</td>\n",
+       "      <td>24/10/18</td>\n",
+       "      <td>6:10:307</td>\n",
+       "      <td>update \"USER1\".\"T1\" set \"A\" = '54' where \"A\" =...</td>\n",
+       "      <td>update \"USER1\".\"T1\" set \"A\" = '32' where \"A\" =...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>USER1</td>\n",
+       "      <td>UPDATE</td>\n",
+       "      <td>T1</td>\n",
+       "      <td>TS1</td>\n",
+       "      <td>USER1</td>\n",
+       "      <td>24/10/18</td>\n",
+       "      <td>6:10:307</td>\n",
+       "      <td>update \"USER1\".\"T1\" set \"A\" = '54' where \"A\" =...</td>\n",
+       "      <td>update \"USER1\".\"T1\" set \"A\" = '32' where \"A\" =...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>USER1</td>\n",
+       "      <td>UPDATE</td>\n",
+       "      <td>T1</td>\n",
+       "      <td>TS1</td>\n",
+       "      <td>USER1</td>\n",
+       "      <td>24/10/18</td>\n",
+       "      <td>9:4:300</td>\n",
+       "      <td>update \"USER1\".\"T1\" set \"A\" = '32' where \"A\" =...</td>\n",
+       "      <td>update \"USER1\".\"T1\" set \"A\" = '54' where \"A\" =...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>USER1</td>\n",
+       "      <td>UPDATE</td>\n",
+       "      <td>T1</td>\n",
+       "      <td>TS1</td>\n",
+       "      <td>USER1</td>\n",
+       "      <td>24/10/18</td>\n",
+       "      <td>9:4:300</td>\n",
+       "      <td>update \"USER1\".\"T1\" set \"A\" = '32' where \"A\" =...</td>\n",
+       "      <td>update \"USER1\".\"T1\" set \"A\" = '54' where \"A\" =...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>USER1</td>\n",
+       "      <td>UPDATE</td>\n",
+       "      <td>T1</td>\n",
+       "      <td>TS1</td>\n",
+       "      <td>USER1</td>\n",
+       "      <td>24/10/18</td>\n",
+       "      <td>9:4:300</td>\n",
+       "      <td>update \"USER1\".\"T1\" set \"A\" = '54' where \"A\" =...</td>\n",
+       "      <td>update \"USER1\".\"T1\" set \"A\" = '54' where \"A\" =...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   USERNAME OPERATION TABLE_NAME TABLE_SPACE SEG_OWNER     DATE_     TIME_  \\\n",
+       "12    USER1    UPDATE         T1         TS1     USER1  24/10/18   8:1:306   \n",
+       "13    USER1    UPDATE         T1         TS1     USER1  24/10/18   8:1:306   \n",
+       "14    USER1    UPDATE         T1         TS1     USER1  24/10/18   8:1:306   \n",
+       "15    USER1    UPDATE         T1         TS1     USER1  24/10/18  6:10:307   \n",
+       "16    USER1    UPDATE         T1         TS1     USER1  24/10/18  6:10:307   \n",
+       "17    USER1    UPDATE         T1         TS1     USER1  24/10/18   9:4:300   \n",
+       "18    USER1    UPDATE         T1         TS1     USER1  24/10/18   9:4:300   \n",
+       "19    USER1    UPDATE         T1         TS1     USER1  24/10/18   9:4:300   \n",
+       "\n",
+       "                                                 SQL_  \\\n",
+       "12  update \"USER1\".\"T1\" set \"A\" = '32' where \"A\" =...   \n",
+       "13  update \"USER1\".\"T1\" set \"A\" = '32' where \"A\" =...   \n",
+       "14  update \"USER1\".\"T1\" set \"A\" = '54' where \"A\" =...   \n",
+       "15  update \"USER1\".\"T1\" set \"A\" = '54' where \"A\" =...   \n",
+       "16  update \"USER1\".\"T1\" set \"A\" = '54' where \"A\" =...   \n",
+       "17  update \"USER1\".\"T1\" set \"A\" = '32' where \"A\" =...   \n",
+       "18  update \"USER1\".\"T1\" set \"A\" = '32' where \"A\" =...   \n",
+       "19  update \"USER1\".\"T1\" set \"A\" = '54' where \"A\" =...   \n",
+       "\n",
+       "                                                SQL_1  \n",
+       "12  update \"USER1\".\"T1\" set \"A\" = '1' where \"A\" = ...  \n",
+       "13  update \"USER1\".\"T1\" set \"A\" = '2' where \"A\" = ...  \n",
+       "14  update \"USER1\".\"T1\" set \"A\" = '1' where \"A\" = ...  \n",
+       "15  update \"USER1\".\"T1\" set \"A\" = '32' where \"A\" =...  \n",
+       "16  update \"USER1\".\"T1\" set \"A\" = '32' where \"A\" =...  \n",
+       "17  update \"USER1\".\"T1\" set \"A\" = '54' where \"A\" =...  \n",
+       "18  update \"USER1\".\"T1\" set \"A\" = '54' where \"A\" =...  \n",
+       "19  update \"USER1\".\"T1\" set \"A\" = '54' where \"A\" =...  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head(16565)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data)"
    ]
   },
   {
