--- a/data/analisis.ipynb
+++ b/data/analisis.ipynb
@@ -8,9 +8,8 @@
    "source": [
     "import pandas as pd\n",
     "import sys\n",
-    "sys.path.append(\"C:\\\\Users\\\\a6r1a\\\\Desktop\\\\LogsPrinting\\\\src\")# db_oracle path, in wodows use \"\\\\\"\n",
-    "from db_oracle import DB\n",
-    "#5ae45b792a6eaa61d973d43b01c87418d8e33df917ebc8a3"
+    "sys.path.append(\"C:\\\\Users\\\\a6r1a\\\\Desktop\\\\LogsPrinting\\\\src\")# db_oracle path, in widows use \"\\\\\"\n",
+    "from db_oracle import DB\n"
    ]
   },
   {
@@ -598,54 +597,6 @@
    ],
    "source": [
     "df.groupby(['OPERATION'])['OPERATION'].count().plot(kind=\"bar\", x=\"OPERATION\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#fin del archivo, el resto es puro debuging"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pd.DataFrame.from_dict(db.exec_dml('''select name as tablespace from v$tablespace\n",
-    "                                                                where name <> 'SYSTEM'\n",
-    "                                                                and name <> 'SYSAUX'\n",
-    "                                                                and name <> 'UNDOTBS1'\n",
-    "                                                                and name <> 'TEMP'\n",
-    "                                                                and name <> 'RMAN'\n",
-    "                                                                '''))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pd.DataFrame.from_dict(db.exec_dml('''select username from dba_users \n",
-    "                                                        where username <> 'OUTLN' \n",
-    "                                                        and username <> 'DIP'\n",
-    "                                                        and username <> 'ORACLE_OCM'\n",
-    "                                                        and username <> 'APPQOSSYS'\n",
-    "                                                        and username <> 'DBSNMP'\n",
-    "                                                        and username <> 'SYS'\n",
-    "                                                        and username <> 'SYSTEM'\n",
-    "                                                        '''))"
    ]
   }
  ],
